--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
                 <h2 class="section-title">Get In Touch</h2>
                 <div class="contact-content">
                     <p>I'm always excited to discuss new projects, creative ideas, or opportunities to be part of your vision. Feel free to send me a message!</p>
-                    <form action="send_email.php" method="POST" class="contact-form">
+                    
+                    <!-- UPDATED: This form now points to Formspree -->
+                    <form action="https://formspree.io/f/xdkzgrvj" method="POST" class="contact-form">
                         <div class="form-group">
                             <label for="name">Name</label>
                             <input type="text" id="name" name="name" placeholder="Your Name" required>
