--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
                         <img src="images/2.png" alt="Graphic Design 3" onerror="this.onerror=null;this.src='https://placehold.co/600x400/333/FFF?text=Image+Not+Found';">
                         <p class="graphic-caption">Series: Random Poster Collections III</p>
                     </a>
-                    <a href="https://www.instagram.com/p/DIRU2JAz8xP/?img_index=1" target="_blank" rel="noopener noreferrer" class="graphic-item">
+                    <a href="https://www.instagram.com/p/DIRU2JAz8xP/" target="_blank" rel="noopener noreferrer" class="graphic-item">
                         <img src="images/3.png" alt="Graphic Design 4" onerror="this.onerror=null;this.src='https://placehold.co/600x400/333/FFF?text=Image+Not+Found';">
                         <p class="graphic-caption">Art of the Move: vita ex morte</p>
                     </a>
-                    <a href="https://www.instagram.com/p/DJuAT1Ez6er/" target="_blank" rel="noopener noreferrer" class="graphic-item">
+                    <a href="https://www.instagram.com/p/DJt___kTWWG/" target="_blank" rel="noopener noreferrer" class="graphic-item">
                         <img src="images/4.png" alt="Graphic Design 5" onerror="this.onerror=null;this.src='https://placehold.co/600x400/333/FFF?text=Image+Not+Found';">
                         <p class="graphic-caption">Series: Random Poster Collections V</p>
                     </a>
