--- a/index.html
+++ b/index.html
@@ -49,7 +49,27 @@
                     </div>
                 </div>
                 <div class="hero-image-container">
-                    <img src="images/me.JPG" alt="A photo of Jersey Zenith" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Your+Image';">
+                    <!-- Replace these with your 30 image paths -->
+                    <img src="images/me.JPG" alt="A photo of Jersey Zenith" class="hero-image active-slide" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+1';">
+                    <img data-src="images/image_2.jpg" alt="Portfolio Image 2" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+2';">
+                    <img data-src="images/image_3.jpg" alt="Portfolio Image 3" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+3';">
+                    <img data-src="images/image_4.jpg" alt="Portfolio Image 4" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+4';">
+                    <img data-src="images/image_5.jpg" alt="Portfolio Image 5" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+5';">
+                    <img data-src="images/image_6.jpg" alt="Portfolio Image 6" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+6';">
+                    <img data-src="images/image_7.jpg" alt="Portfolio Image 7" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+7';">
+                    <img data-src="images/image_8.jpg" alt="Portfolio Image 8" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+8';">
+                    <img data-src="images/image_9.jpg" alt="Portfolio Image 9" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+9';">
+                    <img data-src="images/image_10.jpg" alt="Portfolio Image 10" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+10';">
+                    <img data-src="images/image_11.jpg" alt="Portfolio Image 11" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+11';">
+                    <img data-src="images/image_12.jpg" alt="Portfolio Image 12" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+12';">
+                    <img data-src="images/image_13.jpg" alt="Portfolio Image 13" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+13';">
+                    <img data-src="images/image_14.jpg" alt="Portfolio Image 14" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+14';">
+                    <img data-src="images/image_15.jpg" alt="Portfolio Image 15" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+15';">
+                    <img data-src="images/image_16.jpg" alt="Portfolio Image 16" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+16';">
+                    <img data-src="images/image_17.jpg" alt="Portfolio Image 17" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+17';">
+                    <img data-src="images/image_18.jpg" alt="Portfolio Image 18" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+18';">
+                    <img data-src="images/image_19.jpg" alt="Portfolio Image 19" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+19';">
+                    <img data-src="images/image_20.jpg" alt="Portfolio Image 20" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+20';">
                 </div>
             </div>
         </section>
@@ -150,7 +170,7 @@
                         <img src="images/2.png" alt="Graphic Design 3" onerror="this.onerror=null;this.src='https://placehold.co/600x400/333/FFF?text=Image+Not+Found';">
                         <p class="graphic-caption">Series: Random Poster Collections III</p>
                     </a>
-                    <a href="https://www.instagram.com/p/DIRU2JAz8xP/" target="_blank" rel="noopener noreferrer" class="graphic-item">
+                    <a href="https://www.instagram.com/p/DIRU2JAz8xP/?img_index=1" target="_blank" rel="noopener noreferrer" class="graphic-item">
                         <img src="images/3.png" alt="Graphic Design 4" onerror="this.onerror=null;this.src='https://placehold.co/600x400/333/FFF?text=Image+Not+Found';">
                         <p class="graphic-caption">Art of the Move: vita ex morte</p>
                     </a>
@@ -233,8 +253,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary">Send Message <i class="fas fa-paper-plane"></i></button>
                     </form>
-                    <!-- ADDED THIS DIV FOR STATUS MESSAGES -->
-                    <div id="form-message"></div>
+                    <div id="form-message" class="form-message"></div>
                 </div>
             </div>
         </section>
