--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,7 +45,7 @@
                     </div>
                 </div>
                 <div class="hero-image-container">
-                    <img src="images/me.JPG" alt="A photo of Jersey Zenith" class="hero-image">
+                    <img src="images/me.JPG" alt="A photo of Jersey Zenith" class="hero-image" onerror="this.onerror=null;this.src='https://placehold.co/400x500/8c73ff/FFF?text=Image+Not+Found';">
                 </div>
             </div>
         </section>
