--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             <span class="tag tag-css">CSS</span>
                             <span class="tag tag-js">JavaScript</span>
                         </div>
-                        <a href="#" target="_blank" rel="noopener noreferrer" class="project-link">View Site <i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://jerseysetera.github.io/feintlab/" target="_blank" rel="noopener noreferrer" class="project-link">View Site <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
