--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <div class="container hero-container">
                 <div class="hero-text">
                     <h1 class="hero-title">Hi, I'm <span>Jersey Zenith</span></h1>
-                    <p class="hero-subtitle">Just a guy who's a Web Developer, Designer & Beat Producer</p>
+                    <p class="hero-subtitle">Web Developer, Graphic Designer, Data Annotator & Beat Producer</p>
                     <div class="hero-buttons">
-                        <a href="#projects" class="btn btn-primary">View My Work <i class="fas fa-arrow-right"></i></a>
+                        <a href="pdf/RESUME.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary">View My Resume <i class="fas fa-file-pdf"></i></a>
                         <a href="#contact" class="btn btn-secondary">Get in Touch <i class="fas fa-paper-plane"></i></a>
                     </div>
                 </div>
@@ -195,6 +195,14 @@
                         <img src="images/3d68020bc8074b99bf69ee6e8a0ca385.png" alt="SEO Certified" onerror="this.onerror=null;this.src='https://placehold.co/600x400/8c73ff/FFF?text=SEO+Certified';">
                         <p class="graphic-caption">SEO Certified</p>
                     </a>
+                    <a href="pdf/GCAI.pdf" target="_blank" rel="noopener noreferrer" class="graphic-item">
+                        <img src="images/GCAI.png" alt="SEO Certified" onerror="this.onerror=null;this.src='https://placehold.co/600x400/8c73ff/FFF?text=Google+Cloud+AI';">
+                        <p class="graphic-caption">Innovating with Google Cloud AI</p>
+                    </a>
+                    <a href="pdf/UIUX.pdf" target="_blank" rel="noopener noreferrer" class="graphic-item">
+                        <img src="images/UIUX.png" alt="SEO Certified" onerror="this.onerror=null;this.src='https://placehold.co/600x400/8c73ff/FFF?text=Basics+of+UI/UX';">
+                        <p class="graphic-caption">Basics of UI/UX</p>
+                    </a>
                 </div>
             </div>
         </section>
@@ -267,6 +275,28 @@
                             <span class="tag tag-js">JavaScript</span>
                         </div>
                         <a href="https://jerseysetera.github.io/sample3/" target="_blank" rel="noopener noreferrer" class="project-link">View Site <i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                    <div class="project-card">
+                        <h3>Sample site for Art of Grillz</h3>
+                        <p>A sample design for a jewelry business that mainly focuses on grillz</p>
+                        <div class="project-tags">
+                            <span class="tag tag-html">HTML</span>
+                            <span class="tag tag-css">CSS</span>
+                            <span class="tag tag-tailwind">Tailwind</span>
+                            <span class="tag tag-js">JavaScript</span>
+                        </div>
+                        <a href="https://jerseysetera.github.io/sample8/" target="_blank" rel="noopener noreferrer" class="project-link">View Site <i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                    <div class="project-card">
+                        <h3>Sample site for The Vintage Bug</h3>
+                        <p>A sample design for a client in UK for her personal art business.</p>
+                        <div class="project-tags">
+                            <span class="tag tag-html">HTML</span>
+                            <span class="tag tag-css">CSS</span>
+                            <span class="tag tag-tailwind">Tailwind</span>
+                            <span class="tag tag-js">JavaScript</span>
+                        </div>
+                        <a href="https://jerseysetera.github.io/sample6/" target="_blank" rel="noopener noreferrer" class="project-link">View Site <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
